feat: Internationalization (i18n) of UI text elements across templates and JS

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -72,13 +72,15 @@
             <div class="columns is-vcentered is-mobile">
                 <div class="column is-12-mobile is-6-tablet">
                     <p class="is-size-7 opacity-70">
-                        <span class="has-text-weight-bold">Build:</span> <span id="buildVersionDisplay">--</span>
+                        <span class="has-text-weight-bold">{{ t('footer.build') }}:</span> <span
+                            id="buildVersionDisplay">--</span>
                     </p>
                 </div>
                 <div class="column is-12-mobile is-6-tablet has-text-right-tablet">
                     <p class="is-size-7 opacity-70">
-                        <span class="has-text-weight-bold">{{ t('Identificação') }}:</span> <span id="idSource">{{
-                            t('Carregando...') }}</span>
+                        <span class="has-text-weight-bold">{{ t('footer.identification') }}:</span> <span
+                            id="idSource">{{
+                            t('common.loading') }}</span>
                     </p>
                 </div>
             </div>
